# gmail-job-digest

./: .gitignore  LICENSE  README.md  pyproject.toml  state.json
.github/workflows/: job_summary.yml
scripts/: get_gmail_token.py
src/: analyzer.py  gmail_client.py  main.py  slack.py
